# ContextNegBench-Lite

./: .gitignore  CHANGELOG.md  GITHUB_PUBLICATION_MANIFEST.md  LICENSE  PROJECT_CARD.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/models/: openclip_rn50.yaml  openclip_vit_b16_openai.yaml  openclip_vit_b16_siglip.yaml  openclip_vit_b32.yaml  openclip_vit_b32_datacomp.yaml  (+1 more)
data/: README.md
docs/: appendix_logical_connectors.md  appendix_negation_delta.md  dataset_card.md  github_publication_checklist.md  index.md  lexical_bias_baselines.md  limitations.md  methodology.md  metrics.md  prompt_sensitivity.md  related_work.md  release_v0.1.0.md  results_summary.md  runbook.md
notebooks/: quick_demo.ipynb
results/: README.md  full_research_report.md  human_sanity_table.csv
scripts/: README.md  aggregate_model_matrix.py  analyze_lexical_bias_baselines.py  analyze_logical_connector_embeddings.py  analyze_negation_delta_consistency.py  benchmark_runtime_memory.py  build_context_neg_annotations.py  build_human_sanity_table.py  check_context_neg_dataset.py  enrich_context_neg_datasets.py  generate_sample_synthetic_dataset.py  make_context_neg_review_gallery.py  reproduce_paper_tables.py  run_dog_grass_false_negation_analysis.py  run_final_contextneg_analysis.py  run_model_matrix.py  search_download_context_neg_images.py  smoke_test.py  validate_result_schemas.py
tests/: test_caption_pairs.py  test_context_neg.py  test_dataset_generation.py  test_end_to_end_evaluation.py  test_metrics.py  test_schema_validation.py
(+49 files in other folders)
