[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "negcompbench-lite"
version = "0.1.0"
description = "A lightweight diagnostic benchmark for negation and compositional reasoning in CLIP-like models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NegCompBench-Lite contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=10.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "torch>=2.1",
]

[project.optional-dependencies]
openclip = ["open_clip_torch>=2.24"]
siglip = ["open_clip_torch>=2.24", "transformers>=4.40"]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8", "pandas-stubs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true
disable_error_code = ["import-untyped"]
